--- a/helloWorld.html
+++ b/helloWorld.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sitio Web Coool</h1>
     <p>Saludos People</p>
+    <p>Por favor cuéntame qué te pareció el curso</p>
 </body>
 </html>
