--- a/helloWorld.html
+++ b/helloWorld.html
@@ -6,8 +6,7 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio Web Coool</h1>
+    <h1>Un nuevo head</h1>
     <p>Saludos People</p>
-    <p>Por favor cuéntame qué te pareció el curso</p>
 </body>
 </html>
