me la va a pelar este curso

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Platzi</title>
+    <title>Titulo más perron</title>
 </head>
 <body>
     <h1>Un nuevo head</h1>
     <p>Saludos People</p>
+    <p>Nuevo párrafo</p>
+    <p>y otro</p>
+    <p>y uno más</p>
 </body>
 </html>
