Commit desde VS Code

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     <h1>Un nuevo head</h1>
-    <p>Saludos People</p>
-    <p>Nuevo párrafo</p>
-    <p>y otro</p>
-    <p>y uno más</p>
+    <p>Cambio final para aprender commits en VS Code</p>
 </body>
 </html>
