Segundo intento VS Code

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Un nuevo head</h1>
-    <p>Cambio final para aprender commits en VS Code</p>
+    <p>Cambio final VS Code</p>
 </body>
 </html>
